set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

include(common)

find_package(SUNDIALS REQUIRED cvode kinsol)

include_directories(.)

configure_file(common.py ${CMAKE_BINARY_DIR}/common.py)

add_subdirectory(algebraic_eqn_with_one_non_isolated_unknown)
add_subdirectory(algebraic_system_with_three_linked_unknowns)
add_subdirectory(algebraic_system_with_various_dependencies_not_ordered)
add_subdirectory(algebraic_system_with_various_dependencies_ordered)
add_subdirectory(dae_cellml_1_1_model)
add_subdirectory(hodgkin_huxley_squid_axon_model_1952_dae)
add_subdirectory(hodgkin_huxley_squid_axon_model_1952_ode)
add_subdirectory(robertson_model_1966_dae)
add_subdirectory(robertson_model_1966_ode)
